Changed fonts, minor spacing fix

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html {
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family:Calibri, sans-serif;
     width: 8.5in;
     margin: auto;
     margin-top: 0px;
